columnreader fix + tac tester